# declarative-agent

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
app/: __init__.py  __main__.py
app/agents/: __init__.py  customer_service_flow.json  finance_expert.json  invalid_agent.json  knowledge_agent.json  knowledge_graph_agent.json  math_assistant.json  multi_tool_agent.json  research_assistant.json  travel_agent_flow.json  travel_expert.json
app/api/: __init__.py  main.py
app/cli/: __init__.py  create_agent.py  manage_agents.py  validate_agents.py
app/core/: __init__.py  agent_manager.py  agent_tool.py  chat_session.py  flow_template_manager.py  multi_agent_flow.py  runtime_engine.py  schema.py  tool_factory.py
app/core/utils/: __init__.py  validation.py
app/examples/: __init__.py  tool_factory_example.py
app/knowledge/: __init__.py  knowledge_base_loader.py
docs/: README.md  api_reference.md  architecture.md  cli_reference.md  configuration_reference.md  developer_guide.md  flow_templates.md  knowledge_integration.md  quickstart.md  user_guide.md
examples/: multi_agent_coordinator.json  tech_expert.json
scripts/: prd.txt  run_api.py  task-complexity-report.json
tests/: __init__.py  test_flow_template.py
tests/api/: test_main.py
tests/core/: __init__.py  test_agent_manager.py  test_runtime_engine.py  test_schema.py  test_tool_factory.py
tests/knowledge/: __init__.py  test_knowledge_base_loader.py
