[metadata]
name = agent-framework
version = 0.1.0
description = Generic Agent Runtime Engine
author = Agent Framework Team
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.11
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    agent-framework = app.cli:main 